# auto_eq_cp

./: .dockerignore  Dockerfile  Dockerfile.api  Dockerfile.build  build-docker.bat  build-docker.sh  build_linux.sh  build_with_docker.bat  build_with_docker.sh  cli.py  main.py  pyproject.toml  requirements-api.txt  start_autoeq.sh  test_api.py
.claude/: settings.local.json
.github/workflows/: build-docker.yml  build-linux.yml  build-rust-native.yml  release.yml
autoeq/: __init__.py  api.py  rest_api.py
autoeq-rust/: Cargo.toml  Dockerfile.linux
autoeq-rust/java/: README.md
autoeq-rust/java/src/main/java/com/autoeq/: AutoEq.java  AutoEqNative.java  EqualizeResult.java  Example.java  ProcessParams.java
autoeq-rust/src/: api.rs  constants.rs  csv.rs  dsp.rs  error.rs  ffi.rs  frequency_response.rs  lib.rs  main.rs  peq.rs  utils.rs
deploy/: README.md  autoeq_main.py  install_linux.sh  start.sh
deploy/autoeq/: rest_api.py
result/: compare.html  python_result.json  rust_result.json
webapp/: main.py
