[package]
name = "autoeq"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
realfft = "3.4"
argmin = "0.10"
argmin-math = "0.4"
regex = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
num-complex = "0.4"
